--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
     	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-    	<meta name="author" content="aaaaa" />
-    	<title>Moving Background</title>
+    	<meta name="author" content="Rienier Patron" />
+    	<title>This Game</title>
     </head>
 
 <body>
